# esp32-thesis

./: .gitignore  Cargo.toml  build.rs  diagram.json  info.txt  overlay.nix  partitions.csv  taplo.toml  wokwi.toml
.cargo/: config.toml
.devcontainer/: .bash_esp_init  Dockerfile  devcontainer.json  flashable.sh
.github/workflows/: rust_ci.yml
.helix/: languages.toml
.zed/: settings.json
pkgs/: llvm-xtensa-bin.nix  llvm-xtensa-lib.nix  rust-xtensa-bin.nix
pkgs/esp-idf/: default.nix
shells/: esp32s3-idf-rust.nix
src/: main.rs
